--- a/Biologia.css
+++ b/Biologia.css
@@ -4,16 +4,13 @@
     background-color: #ccc299c2;
 
 
+
 }
 
 .encabezado{
     width:100%;
     height: 200px;
     background-color: rgb(162,202,234);
-    font-size: 40px;
-    text-align: center;
-
-    
 
     
 }
@@ -39,9 +36,8 @@
     width:20%;
     height: 3405px;
     background-color: rgb(162,202,234);
-    
-}
 
+}
 
 .centro{
 
@@ -51,60 +47,8 @@
     color: blue;
     font-size: 20px;
     color: rgb(22, 35, 92);
-    font-family: 'Times New Roman', Times, serif;
     
-
-
-
 }
-    
-
-
-.GobiernoEscolar{
-
-
-    width:100px;
-   height:98px;
-   background-color: rgb(72, 113, 141);
-   margin: 2px;
-}
-
-
-.DemocraciaEscolar{
-
-    width:100px;
-   height:98px;
-   background-color: rgb(72, 113, 141);
-   margin: 2px;
-}
-
-
-.DemocraciaModerna{
-
-    width:100px;
-   height:98px;
-   background-color: rgb(72, 113, 141);
-   margin: 2px;
-}
-
-
-.DIHenColombia{
-
-    width:100px;
-   height:98px;
-   background-color: rgb(72, 113, 141);
-   margin: 2px;
-}
-
-
-.DerechosydefensaenColombia{
-
-    width:100px;
-   height:98px;
-   background-color: rgb(72, 113, 141);
-   margin: 2px;
-}
-
 
 .ITS{
 
@@ -145,29 +89,12 @@
 }
 
 
-.Biografíadematemático{
 
-    width:100px;
-   height:98px;
-   background-color: rgb(72, 113, 141);
-   margin: 2px;
-
-}
-
-
-.Importanciadelaestadística{
-
-    width:100px;
-   height:98px;
-   background-color: rgb(72, 113, 141);
-   margin: 2px;
-}
 .derecho{
-    
 
     width:20%;
     height: 3405px;
-    background-color: rgb(162,202,234);
+    background-color: rgb(162, 202,234);
 }
 
 .Sociales{
